Fix align in button.

--- a/godlike.less
+++ b/godlike.less
@@ -123,6 +123,12 @@ input {
     }
 }
 
+button {
+    > * {
+        vertical-align: middle;
+    }
+}
+
 textarea {
     overflow: auto;
     resize: none;
