--- a/godlike.styl
+++ b/godlike.styl
@@ -103,6 +103,10 @@ input
     &[type='number']
         -moz-appearance textfield
 
+button
+    > *
+        vertical-align middle
+
 textarea
     overflow auto
     resize none
